# sohlf-validator

./: .gitignore.txt  README.md  SPECIFICATION.md  app.py  main.py  proof.tex  pyproject.toml  render.yaml  requirements.txt
antihallucination/: core.py
sohlf_validator/: __init__.py  validator.py
