[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sohlf-validator-ryujin"  # <- 이 부분을 고유하게 변경 (예: sohlf-validator-se)
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "SO-HLF 3단계 공리 기반 LLM 할루시네이션(환각) 소거 위상수학 필터 엔진"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sohlf_validator"]
